--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.host=0.0.0.0
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest09
+spring.rabbitmq.password=guest
 consumer.enabled=true
 
 spring.data.mongodb.uri=mongodb://localhost:27017/simulationDBs
