--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 consumer.enabled=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/simulationDBs
+spring.data.mongodb.uri=mongodb://localhost:27017/simulationResultsDB
